body overflow fix

--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -9,6 +9,8 @@ html {
 html,
 body {
   height: 100%;
+  position: relative;
+  overflow-x: hidden;
 }
 
 a {
@@ -27,7 +29,6 @@ body {
   font-size: 15px;
   line-height: 24px;
   color: $text;
-  overflow-x: hidden;
   background-color: #f4f6f5;
 }
 .wrapper {
